# CAD_CombinationalCircuits

./: .gitignore  README.md  runTests
.github/workflows/: static.yml  tests.yml
Generator/docs/DoxyFile/: Doxy_config
Generator/docs/html/: _abc_utils_8cpp.html  _abc_utils_8h.html  _abc_utils_8h_source.html  _auxiliary_methods_8cpp.html  _auxiliary_methods_8h.html  _auxiliary_methods_8h.js  _auxiliary_methods_8h_source.html  _auxiliary_methods_tests_8cpp.html  _c_make_c_x_x_compiler_id_8cpp.html  _chronosome_8cpp.html  _chronosome_8h.html  _chronosome_8h_source.html  _chronosome_type_8cpp.html  _chronosome_type_8h.html  _chronosome_type_8h_source.html  _circuit_8cpp.html  _circuit_8h.html  _circuit_8h_source.html  _circuits_parameters_8h.html  _circuits_parameters_8h_source.html  _data_base_generator_8cpp.html  _data_base_generator_8h.html  _data_base_generator_8h_source.html  _data_base_generator_parameters_8cpp.html  _data_base_generator_parameters_8h.html  _data_base_generator_parameters_8h.js  _data_base_generator_parameters_8h_source.html  _files_tools_8cpp.html  _files_tools_8h.html  _files_tools_8h_source.html  _files_tools_tests_8cpp.html  _gen_generator_8cpp.html  _gen_generator_8h.html  _gen_generator_8h_source.html  _generation_parameters_8cpp.html  _generation_parameters_8h.html  _generation_parameters_8h_source.html  (+311 more)
Generator/source/: AuxiliaryMethods.cpp  AuxiliaryMethods.h  CMakeLists.txt  Doxyfile.in  Settings.cpp  main.cpp
Generator/source/generators/Genetic/Mutations/: CMakeLists.txt  MutationTruthTable.cpp  MutationTruthTable.h
(+71 files in other folders)
